# irssi-otr

./: .gitignore  .uncrustify.cfg  CMakeLists.txt  ChangeLog  HOWTO  HOWTO_PACKAGE  INSTALL  Makefile  Makefile.am  Packaging-DEB.cmake  Packaging-RPM.cmake  Packaging.cmake  README  README.irssi-headers  README.irssi-private-headers  README.md  README.xchat  bootstrap  configure.ac  formats.txt  io-config.h.in  io_set.c  io_util.c  irssi-otr.spec.in  irssi_otr.c  irssi_otr.h  makeformats.py  mksrcpackage.sh  otr.c  otr.h  otr_key.c  otr_ops.c  otr_util.c  otrutil.c  otrutil.h  privheaders.patch  ui.c  ui.h  xchat_otr.c  xchat_otr.h
cmake/: FindIrssi.cmake  FindOTR.cmake
cmake-extensions/: FindLibGcrypt.cmake  FindLibOTR.cmake  Git.cmake  InstallAsUser.cmake  cscope.cmake
help/: Makefile.am  otr
irssi/: CMakeLists.txt  irssi_otr.c  irssi_otr.h
src/: Makefile.am  cmd.c  cmd.h  io-config.h  io_set.c  io_util.c  irssi-otr.h  irssi_otr.c  irssi_otr.h  key.c  key.h  module.c  module.h  otr-formats.c  otr-formats.h  otr-ops.c  otr.c  otr.h  otr_key.c  otr_ops.c  otr_util.c  utils.c  utils.h
weechat/: .gitignore  CMakeLists.txt  weechat_otr.c  weechat_otr.h
xchat/: CMakeLists.txt  xchat_otr.c  xchat_otr.h
