FIND_PATH(XCHAT_INCLUDE_DIR NAMES xchat/xchat-plugin.h)
MARK_AS_ADVANCED(XCHAT_INCLUDE_DIR)

IF(NOT XCHAT_INCLUDE_DIR)
  MESSAGE(STATUS "*** no xchat found ***")
ELSEIF(BUILDFOR AND NOT BUILDFOR STREQUAL "xchat")
  MESSAGE(STATUS "*** not building for xchat ***")
ELSE(NOT XCHAT_INCLUDE_DIR)
  MESSAGE(STATUS "*** building for xchat ***")
  SET(HAVE_XCHAT 1)
  SET(IRCOTR_INCLUDE_DIRS
    ${IRCOTR_INCLUDE_DIRS}
    ${XCHAT_INCLUDE_DIR}/xchat
    xchat)
ENDIF(NOT XCHAT_INCLUDE_DIR)

INCLUDE_DIRECTORIES(${IRCOTR_INCLUDE_DIRS})

IF(HAVE_XCHAT)
  ADD_LIBRARY(xchatotr SHARED xchat/xchat_otr.c otr_util.c otr_ops.c otr_key.c ${PROJECT_BINARY_DIR}/xchat-formats.c)
  TARGET_LINK_LIBRARIES(xchatotr ${GLIB_LIBRARIES} ${LIBOTR_LIBRARIES})
  SET_TARGET_PROPERTIES(xchatotr PROPERTIES 
    COMPILE_FLAGS -DTARGET_XCHAT
    OUTPUT_NAME "xchatotr"
    LINK_FLAGS "${MAIN_LDFLAGS}")
  IF(APPLE)
    SET_TARGET_PROPERTIES(xchatotr PROPERTIES SUFFIX ".so")
  ENDIF(APPLE)
ENDIF(HAVE_XCHAT)

# docdir

IF(NOT DOCDIR)
  SET(DOCDIR share/doc/xchat-otr)
ENDIF(NOT DOCDIR)

INSTALL(TARGETS xchatotr DESTINATION lib${LIB_SUFFIX}/xchat/plugins)
INSTALL(FILES README LICENSE DESTINATION ${DOCDIR})
